Issues fixed for text typing overflow

--- a/WebApplication2/App/Theme/css/style.css
+++ b/WebApplication2/App/Theme/css/style.css
@@ -196,6 +196,7 @@ width: 48% !important;
     height: 70px;
     border-bottom: 1px solid #e7ebee;
     position: relative;
+    width: 106%;
 }
 
     .chat:hover {
@@ -406,7 +407,7 @@ width: 48% !important;
     }
 
         #chat-messages div.message.right {
-            padding: 0 58px 30px 0;
+            padding: 0 30px 30px 0;
             margin-left: 19px;
         }
 
@@ -435,6 +436,8 @@ width: 48% !important;
     float: left;
     margin-bottom: 20px;
     min-width: 40px;
+    max-width: 100%;
+    box-sizing: border-box;
 }
 
 #chat-messages div.message.right .bubble {
@@ -478,12 +481,13 @@ div.message.right .corner {
     #sendmessage input {
         background: #e3e9ed;
         border: none;
-        padding: 0 15px;
+        padding: 0 65px 0 15px;
         font-size: 14px;
         font-family: "Open Sans", sans-serif;
         color: #8495a3;
         height: 100%;
         width: 100%;
+        box-sizing: border-box;
     }
 
         #sendmessage input:focus {
